force-app/main/default/objects/pd_jp_20151124__ABM_PardotEmail__c/pd_jp_20151124__ABM_PardotEmail__c.object-meta.xml
<CustomObject>
    <label>MAPlusAC Pardot送信メール</label>
    <nameField>
        <label>Email</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>