force-app/main/default/objects/pd_jp_20151124__ABM_PardotEmail__c/fields/pd_jp_20151124__crm_fid__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__crm_fid__c</fullName>
    <label>CrmID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>