force-app/main/default/objects/pd_jp_20151124__ABM_PardotEmail__c/fields/pd_jp_20151124__email_name__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__email_name__c</fullName>
    <label>メール名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>