force-app/main/default/objects/pd_jp_20151124__ABM_PardotEmail__c/fields/pd_jp_20151124__id__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__id__c</fullName>
    <externalId>true</externalId>
    <label>ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>