force-app/main/default/objects/pd_jp_20151124__ABM_PardotEmail__c/fields/pd_jp_20151124__send_type__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__send_type__c</fullName>
    <description>1:OneToOne 2:List</description>
    <label>送信種別</label>
    <length>1</length>
    <type>Text</type>
</CustomField>