force-app/main/default/objects/pd_jp_20151124__ABM_PardotEmail__c/fields/pd_jp_20151124__subject__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__subject__c</fullName>
    <label>件名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>